--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,6 +7,11 @@
     width: 600px;
 }
 
+#card-image{
+    width: 100%;
+    margin: auto;
+}
+
 #search_items {
     max-height: 400px;
     overflow-y: scroll;
