--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="container my-4">
-        <div class="row">
+        <div class="row g-2">
             <div class="col-xs-12 col-sm-2 col-md-3 col-lg-2">
                 <div class="list-group">
                     {% for category in categories %}
@@ -17,7 +17,7 @@
                    {% for product in products %}
                        <div class="col-sm-6 col-md-6 col-lg-3">
                             <div class="card" id="product_card">
-                               <img id="card_image" src="{{ product.image.url }}" class="card-img-top" alt="..." height="200px">
+                                <span id="card-image" class="text-center my-2"></span>
                               <div class="card-body">
                                 <h5 class="card-title">{{ product.name }}</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
