--- a/templates/items_page.html
+++ b/templates/items_page.html
@@ -28,7 +28,9 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="{{ product.image.url }}" class="d-block w-100" height="500px" width="100%">
+                      <span id="card-image" class="my-2 d-block w-100" style="height: 200px;" width="100%">
+                          Description: {{ product.description }}
+                      </span>
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -49,7 +51,7 @@
            {% for product in products %}
                <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="card" id="product_card">
-                       <img id="card_image" src="{{ product.image.url }}" class="card-img-top" alt="..." height="200px">
+                      <span id="card-image" class="text-center my-2"></span>
                       <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
