--- a/templates/products.html
+++ b/templates/products.html
@@ -17,7 +17,7 @@
                    {% for product in object_list %}
                        <div class="col-sm-6 col-md-6 col-lg-3">
                                 <div class="card" id="product_card">
-                                   <img id="card_image" src="{{ product.image.url }}" class="card-img-top" alt="..." height="200px">
+                               <span id="card-image" class="text-center my-2"></span>
                                   <div class="card-body">
                                     <h5 class="card-title">{{ product.name }}</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
