--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                               <div class="card-body">
                                 <h5 class="card-title">{{ product.name }}</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <a href="{% url 'ecommerce:product_detail' product.pk %}" class="btn btn-primary">Go somewhere</a>
                               </div>
                            </div>
                        </div>
